# gpu_programming_summer_2026

./: .gitignore
cliff_gpu/: README.md  gmm.py  kmeans.py  kmeans_bench.py  kmeans_experiments.ipynb  multi_gmm.py  optim_gmm_numpy.py  pyproject.toml  warp_kmeans.py
cliff_gpu/gmm/: gmm.py  gmm_experiments.ipynb  multi_gmm.py  multi_gmm_experiments.ipynb  mutli_gmm_bench.py  optim_gmm_numpy.py
cliff_gpu/kmeans/: kmeans.py  kmeans_bench.py  kmeans_experiments.ipynb  multi_kmeans_experiments.ipynb  tiled_kmeans.py  warp_kmeans.py
week_1/: distances  graph_csv.py  pairwise_distance.cu  throughput.csv
week_2/: buffers.h  collision_check  collision_check.cu  collision_check_blocks.cu  index_test.py  report.ncu-rep
week_2/old_kernels/: collision_check_block.cu  collision_check_j_loop.cu  collision_check_obs_loop.cu  collision_check_original.cu  collision_check_store_reindex.cu  collision_check_vec4_shared_sphere.cu
week_3/: buffers.h  knn  knn.cu  knn_shared_memory.cu  knn_thread_per_float4.cu  report.ncu-rep
week_4/: README.md  buffers.h  program  serial_collision_check.cu  serial_program  streamed_collision_check.cu
week_5/: README.md  mat4_batch_gemm.cu  mat4_batch_gemm_thread_per_matmul.cu
